# basics

./: CMakeLists.txt  README.md  analyser.h  chorus.h  crunch.h  freq-shifter.h  limiter.h  reverb.h
include/signalsmith-basics/: analyser.h  chorus.h  crunch.h  dynamics.h  freq-shifter.h  limiter.h  reverb.h
include/stfx/: stfx-library.h
